src_old/objects/RetailerService__c.object
<CustomObject>
    <description>Retailer Service relates Services to a Retailer, which determines the Services that are available when building a Project Service. Retailer Service is related to Retailer and Service.</description>
    <fields>
        <fullName>FridayStartTime__c</fullName>
        <label>Friday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <label>Friday</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobManualTemplate__c</fullName>
        <label>Job Manual Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MondayStartTime__c</fullName>
        <description>Default start time for monday</description>
        <label>Monday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <label>Monday</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PeriodLock__c</fullName>
        <label>Period Lock</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Orop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Retailer__c</referenceTo>
        <relationshipLabel>Retailer Services</relationshipLabel>
        <relationshipName>RetailerService_Retailers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SaturdayStartTime__c</fullName>
        <label>Saturday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <label>Saturday</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Retailer Services</relationshipLabel>
        <relationshipName>RetailerService_Services</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SundayStartTime__c</fullName>
        <inlineHelpText>For example: 10:00 am</inlineHelpText>
        <label>Sunday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <label>Sunday</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThursdayStartTime__c</fullName>
        <label>Thursday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <label>Thursday</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TuesdayStartTime__c</fullName>
        <label>Tuesday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <label>Tuesday</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UseColorPrinter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used to indicate if this retailer&apos;s service event manual should use what type of printer: color or white/black</description>
        <label>Use Color Printer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WednesdayStartTime__c</fullName>
        <label>Wednesday Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <label>Wednesday</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Retailer Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Retailer__c</columns>
        <columns>JobManualTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RTSR-{000}</displayFormat>
        <label>Retailer Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>